--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,6 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
-    position: relative;
-    overflow: auto;
 }
 
 header {
@@ -12,10 +10,7 @@ header {
     padding: 10px 0;
     text-align: center;
     font-size: 15px;
-    z-index: 1;
-    position: relative;
 }
-
 
 nav {
     display: flex;
@@ -25,43 +20,6 @@ nav {
     margin-bottom: 10px;
 
 }
-
-.fixed-image
-{
-    position: fixed;
-    z-index: -1;
-    top:0px;
-    transform: translateX(-50%);
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    background-image: url(https://hartfordbaking.com/wp-content/uploads/2017/04/wholesalebreadsuppliers.jpg);
-    background-size: cover;
-}
-
-.overlay {
-    position: absolute;
-    top: 110px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(19, 19, 19, 0.4); 
-    z-index: -1;
-}
-
-.content
-{
-    position: relative;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    text-align: center;
-    color: white;
-    font-family: fantasy;
-}
-.content p
-{
-    font-size: 35px !important;
-}
 .item {
     display: inline-flex;
     align-items: center;
@@ -70,12 +28,15 @@ nav {
 .item1 {
     width: 250px;
     background-color: white;
+    border: none;
     height: 30px;
+    font-size: 15px;
+    outline: none;
     color: black;
     text-align: left;
     margin-left: 70px;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
 }
 
 .item2 {
@@ -85,8 +46,8 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4=2px;
+    border-bottom-right-radius:2px;
 }
 
 .icon {
@@ -113,6 +74,7 @@ nav {
     font-size: 17px;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 p
 {
@@ -122,27 +84,31 @@ p
 }
 .enter {
     margin-left: 10px;
+    cursor: pointer;
 }
 
 nav ul {
     list-style: none;
     padding: 0px;
     display: inline-flex;
-    cursor: pointer;
 }
 
 
-nav ul li {
+li {
     display: inline-flex; 
     align-items: center;
     z-index: 10;
 }
 
+ul li i{
+    cursor: pointer;
+}
+
 .menu {
     list-style-type: none;
-    margin: 0;
     display: flex;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-bottom: 0px;
+    font-size: 15px;
 }
 
 .menu li {
@@ -213,83 +179,83 @@ nav ul li {
     display: block;
 }
 
-section {
-    background-color: rgb(202, 226, 226);
-    z-index: 1;
+.slider {
+    background: grey;
+    color: #fff;
+    padding: 10px 0;
+    height: 500px;
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+    margin: auto;
+    overflow: hidden; 
 }
 
-.name-product
-{
-    text-align: center;
-    font-size: 35px;
-    padding: 50px;
+.slide {
+    position: absolute; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0; 
+    transition: opacity 0.5s ease-in-out;
 }
 
-.product-container
-{
-    display: flex;
-    margin-right: 120px;
-    margin-left: 120px;
-    margin-bottom: 100px;
-
-}
-.product2
-{
-    width: calc(80% - 20px);
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-left: 20px;
+.slide img {
+    width: 100%;
+    display: block;
+    object-position: center;
+    object-fit: cover;
 }
 
-.product1
-{
-    width: calc(20% - 20px);
-    background-color: rgb(255, 255, 255);
-    height: 400px;
-    margin-right: 40px;
-    border-radius: 10px;
-    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.4);
+.slide.active {
+    opacity: 1; 
 }
 
-
-.product1-box1
-{
-    background-color: rgb(146, 162, 162);
-    font-size: 20px;
-    border-start-start-radius: 10px;
-    border-start-end-radius: 10px;
-    text-align: center;
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 18px;
     padding: 10px;
-}
-
-.product1-box2
-{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-}
-
-.list
-{
-    text-align: center;
     cursor: pointer;
-    color:rgb(0, 132, 142);
-    margin-top: 15px;
+    border: none;
+}
+
+.prev {
+    left: 10px;
+}
+
+.next {
+    right: 10px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+section {
+    padding: 20px;
+    text-align: center;
+    background-color: rgb(202, 226, 226);
 }
 
 .product {
     position: relative;
     background: #fff;
     border: 1px solid #ddd;
-    width: calc(33.33% - 20px);
-    box-sizing: border-box;
-    height:330px;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 10px;
+    display: inline-block;
+    width: 20%;
+    height:300px;
     vertical-align: top;
     text-align: center;
-    border-radius: 10px;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.2);
-    font-size: 14px;
-    padding: 10px;
+    font-size: 12px;
     overflow: hidden;
 }
 
@@ -338,33 +304,15 @@ section {
     cursor: pointer;
 }
 
-.pagination {
-    text-align: center;
-    margin-top: 20px;
-    width: 100%;
-}
-
-.page-button {
-    margin: 0 5px;
-    padding: 5px 10px;
-    cursor: pointer;
-}
-
-.page-button.active {
-    background-color: #007BFF;
-    color: white;
-    border: none;
-}
-
-
 .zoom-image {
-    width: 200px; 
-    transition: transform 0.3s ease;
+    width: 200px;
+    transition: transform 0.3s ease; 
 }
 
 .zoom-image:hover {
     transform: scale(1.2); 
 }
+
 
 footer {
     color: #fff;
@@ -376,7 +324,6 @@ footer {
     background-image: url('https://www.metro.co.in/img/dairy/Bakery-Hero-img-1392x464.jpg');
     flex-direction: column;
     display: flex;
-    z-index: 0;
 }
 
 
@@ -386,8 +333,8 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(19, 19, 19, 0.7);
-    z-index: -1; 
+    background-color: rgba(19, 19, 19, 0.7); 
+    z-index: 1;
 }
 
 footer div {
@@ -452,99 +399,3 @@ footer div {
 {
     margin-right: 7px;
 }
-/* Tools Member */
-/* .tools-member {
-    float: right;
-    display: table;
-    margin-left: 10px;
-    font-size: 14px;
-}
-
-.tools-member a {
-    position: relative;
-    padding: 5px 0;
-    text-align: center;
-    font-size: 16px;
-    font-weight: bold;
-    color: #565;
-    cursor: pointer;
-}
-.tools-member a:hover > i {
-    border: 1px solid #fff;
-    background-color: rgb(161, 161, 161);
-    color: #fff;
-}
-
-.tools-member i {
-    padding: 10px;
-    border-radius: 50%;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    color: #000;
-    -webkit-transition: 0.2s;
-    -o-transition: 0.2s;
-    transition: 0.2s;
-}
-.tools-member .fa-user {
-    padding: 10px 12.5px;
-}
-.tools-member .fa-shopping-cart {
-    padding: 10px 11px;
-} */
-/* Member */
-    .member {
-        position: relative;
-        float: left;
-        display: table-cell;
-    }
-    .member:hover > .menuMember{
-        z-index: 20;
-        transform: translateX(-40%) scale(1);
-    }
-    .member .menuMember {
-        position: absolute;
-        left: 100%;
-        text-align: center;
-        border-radius: 5px;
-        background-color: #eee;
-        min-width: 170px;
-        transition-duration: .15s;
-        transform: translateX(-40%) scale(0);
-    }
-    .member .menuMember a {
-        display: block;
-        padding: 10px 0;
-        font-size: 16px;
-        font-weight: bold;
-        color: rgb(0, 132, 142);
-        text-decoration: none;
-        border-radius: 4px;
-        transition: background-color 0.3s ease;
-    }
-    .member .menuMember a:hover {
-        background-color: #888;
-        color: #eee;
-    }
-    .tools-member i {
-        /* icon styling */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        background-color: #fff;
-        color: rgb(0, 132, 142);
-        margin-right: 5px;
-        transition: background-color 0.3s ease, color 0.3s ease;
-        font-size: 17px;
-    }
-    
-    .tools-member a:hover>i {
-        background-color: rgb(0, 132, 142);
-        color: #fff;
-    }
-    .member .hide {
-        display: none;
-    }
-/* ======= End Member ======= */
