--- a/css/product.css
+++ b/css/product.css
@@ -4,6 +4,8 @@ body {
     padding: 0;
     position: relative;
     overflow: auto;
+    background-color: rgb(202, 226, 226);
+
 }
 
 header {
@@ -214,6 +216,28 @@ nav ul li {
 section {
     background-color: rgb(202, 226, 226);
     z-index: 1;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    display:flex;
+    
+}
+.product1 {
+    margin-left: 45px;
+    margin-top: 800px;
+    width: 20%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.4);
+    position: absolute;
+    top: 20px;
+    height: 400px;
+    z-index: 3;
+}
+
+.product-tab
+{
+    margin-right: 20px;
+    width: 80%;
 }
 
 .name-product
@@ -223,31 +247,19 @@ section {
     padding: 50px;
 }
 
-.product-container
-{
-    display: flex;
-    margin-right: 120px;
-    margin-left: 120px;
-    margin-bottom: 100px;
-
-}
-.product2
-{
-    width: calc(80% - 20px);
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-left: 20px;
+.product-container {
+    display: inline;
+    flex-wrap: wrap; /* Cho phép các sản phẩm xuống dòng */
+    gap: 20px; /* Khoảng cách giữa các sản phẩm */
+    justify-content: flex-end; /* Đẩy các sản phẩm về phía bên phải */
+    margin-right: 20px; /* Đảm bảo có khoảng cách bên phải */
 }
 
-.product1
-{
-    width: calc(20% - 20px);
-    background-color: rgb(255, 255, 255);
-    height: 400px;
-    margin-right: 40px;
-    border-radius: 10px;
-    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.4);
+
+.product-item {
+    width: calc(33.33% - 20px);
+    box-sizing: border-box; 
+    justify-content: center;
 }
 
 
@@ -275,11 +287,12 @@ section {
     margin-top: 15px;
 }
 
-.product {
+
+
+.product2 {
     position: relative;
     background: #fff;
     border: 1px solid #ddd;
-    width: calc(33.33% - 20px);
     box-sizing: border-box;
     height:330px;
     vertical-align: top;
@@ -289,6 +302,7 @@ section {
     font-size: 14px;
     padding: 10px;
     overflow: hidden;
+    width: 33.33%;
 }
 
 .product img {
