--- a/css/product.css
+++ b/css/product.css
@@ -23,14 +23,20 @@
 }
 
 #product-section {
-    margin-top: 20px;
+    display: flex;
+    position: relative;
+
 }
 
 
 
 /* Hiển thị các sản phẩm */
 .product-tab {
-    display: block;
+    width: 80% ;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-left: 30px;
+    background-color:rgb(202, 226, 226);;
 }
 
 .product-tab h2 {
@@ -41,9 +47,10 @@
 
 .product-item {
     display: inline-block;
-    width: 200px;
+    width: calc(30% - 20px);
     margin: 10px;
     padding: 10px;
+    height: 300px;
     text-align: center;
     border-radius: 8px;
     background-color: #fff;
@@ -71,7 +78,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 10px;
 }
 
 .product-item .it1 {
@@ -88,4 +94,15 @@
 
 .product-item .it2:hover {
     color: #3498db;
+}
+
+.product1
+{
+    width: 20%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.4);
+    position: sticky;
+    top: 20px;
+    height: 400px;
 }
