--- a/css/product.css
+++ b/css/product.css
@@ -28,8 +28,6 @@
 
 }
 
-
-
 /* Hiển thị các sản phẩm */
 .product-tab {
     width: 80% ;
@@ -50,22 +48,26 @@
     width: calc(30% - 20px);
     margin: 10px;
     padding: 10px;
-    height: 300px;
     text-align: center;
     border-radius: 8px;
     background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease-in-out;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.product-item:hover {
-    transform: translateY(-5px);
-}
 
 .product-item img {
     width: 100%;
     height: auto;
     border-radius: 8px;
+}
+
+.zoom-image {
+    width: 200px; 
+    transition: transform 0.3s ease;
+}
+
+.zoom-image:hover {
+    transform: scale(1.2); 
 }
 
 .product-item h3 {
@@ -75,26 +77,42 @@
 }
 
 .product-item .it {
-    display: flex;
-    justify-content: space-between;
+    display: inline-flex;
     align-items: center;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    left: 50%;
+    margin-bottom: 10px;
 }
 
 .product-item .it1 {
-    font-size: 16px;
-    color: #e74c3c;
-    font-weight: bold;
+    width: 100px;
+    background-color: rgba(165, 178, 183, 0.8);
+    height: 30px;
+    color: black;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.4);
 }
 
 .product-item .it2 {
-    font-size: 20px;
+    width: 30px;
+    height: 30px;
+    background-color: rgb(119, 164, 167);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.4);
     cursor: pointer;
-    color: #333;
 }
 
-.product-item .it2:hover {
-    color: #3498db;
-}
 
 .product1
 {
@@ -105,4 +123,23 @@
     position: sticky;
     top: 20px;
     height: 400px;
+    margin-left: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.product1-box1
+{
+    background-color: rgb(146, 162, 162);
+    font-size: 18px;
+    border-start-start-radius: 10px;
+    border-start-end-radius: 10px;
+    text-align: center;
+    padding: 10px;
+}
+
+.product1-box2
+{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    overflow-y: auto;
 }
