--- a/css/product.css
+++ b/css/product.css
@@ -1,11 +1,5 @@
 
 
-/* Tab sản phẩm */
-.product-tab {
-    display: none;
-    padding: 20px;
-    background-color: #f9f9f9;
-}
 
 #home,
 #news,
@@ -34,7 +28,7 @@
     flex-wrap: wrap;
     gap: 20px;
     margin-left: 30px;
-    background-color:rgb(202, 226, 226);;
+    background-color: rgb(202, 226, 226);
 }
 
 .product-tab h2 {
@@ -142,4 +136,37 @@
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     overflow-y: auto;
+}
+.introduce
+{
+    width: 100%;
+    padding: 20px;
+}
+.home-container {
+    display: flex; /* Sắp xếp theo hàng ngang */
+    gap: 30px; /* Khoảng cách giữa các phần tử (tuỳ chỉnh) */
+}
+.home
+{
+    border: solid 1px black;
+    width: calc(33.33% - 20px);
+    overflow: hidden;
+    background-color: white;
+    transition: background-color 0.3s ease;
+}
+
+.home .picture
+{
+    width: 100%;
+}
+.home:hover {
+    background-color: rgb(35, 60, 70); 
+    color: white;
+}
+
+.adv
+{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    padding: 20px;
 }
