--- a/css/product.css
+++ b/css/product.css
@@ -63,7 +63,7 @@
 }
 
 .zoom-image:hover {
-    transform: scale(1.2); 
+    transform: scale(1.1); 
 }
 
 .product-item h3 {
@@ -178,6 +178,7 @@
     border-radius: 8px;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    overflow:hidden;
 }
 
 /* Ảnh sản phẩm */
@@ -190,7 +191,7 @@
 
 /* Hiệu ứng phóng to khi hover vào ảnh */
 .search-result-item img:hover {
-    transform: scale(1.15);
+    transform: scale(1.1);
 }
 
 /* Tiêu đề sản phẩm */
