--- a/css/index.css
+++ b/css/index.css
@@ -789,3 +789,18 @@ footer div {
         display: block;
     }
 }
+
+.close_button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    color: #333;
+}
+
+.close_button:hover {
+    color: #f00;
+}
